--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mcp-server-deployment",
+  "name": "mcp-learning",
   "version": "1.0.0",
   "description": "A Model Context Protocol (MCP) server for learning",
   "type": "module",
