test removing structuredContent

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.17.3",
+    "@sadjadteh-chrono/mcp-learning": "^1.0.0",
     "pngjs": "^7.0.0",
     "puppeteer": "^24.24.0",
     "robotjs": "^0.6.0",
